--- a/index.html
+++ b/index.html
@@ -46,7 +46,118 @@
     </div>
     <div class="team">
         <h3 class="team-heading">Meet our amazing team</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <p class="team-intro">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="teams-container">
+            <div class="team1">
+                <div class="team-photo"></div>
+                <div class="team-description">
+                    <h3 class="team-header">semf ucuk</h3>
+                    <p class="team-description">CEO & Founder</p>
+                </div>
+            </div>
+            <div class="team2">
+                <div class="team-photo"></div>
+                <div class="team-description">
+                    <h3 class="team-header">dik aladin</h3>
+                    <p class="team-description">engineering</p>
+                </div>
+            </div>
+            <div class="team3">
+                <div class="team-photo"></div>
+                <div class="team-description">
+                    <h3 class="team-header">jeng kol</h3>
+                    <p class="team-description">designer</p>
+                </div>
+            </div>
+            <div class="team4">
+                <div class="team-photo"></div>
+                <div class="team-description">
+                    <h3 class="team-header">pet romak</h3>
+                    <p class="team-description">marketing</p>
+                </div>
+            </div>
+        </div>
+        <div class="team-proposal">
+            <p class="team-anouncement">Become part of our dream team, let's join us!</p>
+            <button class="team-button" type="submit">We are hiring</button>
+        </div>
+    </div>
+    <div class="feedback">
+        <div class="contact-form">
+            <h4 class="form-header">Give us a good news</h4>
+            <form action="#">
+                <input type="text" name="contact-form-name" id="contact-form-name" placeholder="Name">
+                <br>
+                <input type="email" name="contact-form-email" id="contact-form-email" placeholder="Email">
+                <br>
+                <input type="text" name="contact-form-subject" id="contact-form-subject" placeholder="Subject">
+                <br>
+                <textarea name="contact-form-message" id="contact-form-message" cols="82" rows="10" placeholder="Your message"></textarea>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+        <div class="happy-clients">
+            <h4 class="clients-header">Our happy clients</h4>
+            <div class="clients-logos">
+                <img src="./design-assets/png/Zara_Logo.png" alt="Zara Logo">
+                <img src="./design-assets/png/Logo_of_Mango_(new).png" alt="Mango logo">
+                <img src="./design-assets/png/1280px-Barneys_New_York_Logo.png" alt="Barneys">
+                <img src="./design-assets/png/1280px-Gucci_Logo.png" alt="Gucci Logo">
+                <img src="./design-assets/png/Calvin_klein_logo.png" alt="Calvin Klein">
+                <img src="./design-assets/png/1280px-Logo_NIKE.png" alt="Nike">
+                <img src="./design-assets/png/Converse_logo.png" alt="Converse Logo">
+                <img src="./design-assets/png/Puma_Logo.png" alt="Puma Logo">
+                <img src="./design-assets/png/1280px-Levi's_logo.png" alt="Levis Logo">
+                <img src="./design-assets/png/Billabong.png" alt="Billabong">
+            </div>
+        </div>
     </div>
 </body>
+<footer>
+    <div class="footer-1">
+        <div class="footer-part1">
+            <div class="footer-upper-line-1">
+                <img src="./design-assets/png/logo.png" alt="">
+                <h2>tajam</h2>
+            </div>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi perspiciatis expedita ex aliquam adipisci est voluptatem! Beatae facere sapiente optio ducimus sint, temporibus pariatur minima cum eos magnam quam facilis.</p>
+        </div>
+        <div class="footer-part2">
+            <h> Our Studio</h3>
+            <div class="address">
+                <img src="./design-assets/png/big104.png" alt="Address">
+                <p>Ruko cucruk, Jl. Radio luar delem jos <br> No. 12 - 13, Kalideres - Jakarta Barat <br> 11480 - Indonesia</p>
+            </div>
+            <div class="mobile">
+                <img src="./design-assets/png/phone351.png" alt="Phone number">
+                <p>(+62) 21-2224-3333</p>
+            </div>
+        </div>
+        <div class="footer-part3">
+            <h3>Stay in Touch</h3>
+            <form action="#">
+                <input type="email" name="touch-email" id="touch-email" placeholder="Subscribe our newsletter">
+                <img src="./design-assets/png/paper122.png" alt="Send icon">
+            </form>
+            <div class="social">
+                <img src="./design-assets/png/facebook.png" alt="Facebook">
+                <img src="./design-assets/png/twitter.png" alt="Twitter">
+                <img src="./design-assets/png/dribbble.png" alt="Dribble">
+                <img src="./design-assets/png/instagram.png" alt="Instagram">
+                <img src="./design-assets/png/gplus.png" alt="Google Plus">
+                <img src="./design-assets/png/youtube.png" alt="Youtube">
+            </div>
+        </div>
+    </div>
+    <div class="footer-2">
+        <ul>
+            <li>Help</li>
+            <li>Terms & Condition</li>
+            <li>Privacy</li>
+        </ul>
+        <div class="copyright">
+            <p>Copyright </p>
+        </div>
+    </div>
+</footer>
 </html>
